# aphasia-wca

./: .gitignore  Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  views.py
accounts/migrations/: 0001_initial.py  0002_profile_address_profile_aphasia_type_and_more.py  0003_profile_phone_number.py
accounts/templates/accounts/: login.html  register.html
aphasiawca/: asgi.py  settings.py  urls.py  wsgi.py
quiz/: admin.py  models.py  urls.py  views.py
quiz/migrations/: 0001_initial.py
quiz/static/quiz/js/: dashboard.js  quiz.js
quiz/templates/quiz/: base.html  dashboard.html  home.html  quiz.html  results.html
